--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <section>
       <h1>vanilla js autocomplete</h1>
       <label for="search">type your search term here:</label>
-      <input type="search" id="search" data-autocomplete-url="./"></input>
+      <input type="search" id="search"></input>
     </section>
     <script src="shared.js"></script>
     <script src="autocomplete.js"></script>
